examples/kju/positive/type_inference/simple_bool.kju
fun kju() : Unit
{
    var a : ?;
    a = true;
}
